src/test/ui/manually_drop_attr/manually_drop-bad-item.stderr
error: attribute should be applied to a struct or enum
  --> $DIR/manually_drop-bad-item.rs:4:1
   |
LL | #[manually_drop]
   | ^^^^^^^^^^^^^^^^
LL |
LL | fn foo() {}
   | ----------- not a struct or enum
   |
note: the lint level is defined here
  --> $DIR/manually_drop-bad-item.rs:2:11
   |
LL | #![forbid(unused_attributes)]
   |           ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

